# ha-nescafe-ble

./: .pre-commit-config.yaml  LICENSE  Makefile  README.md  brewctl.py  main.py  pyproject.toml
custom_components/nescafe_ble/: __init__.py  binary_sensor.py  button.py  config_flow.py  const.py  coordinator.py  manifest.json  nescafe_client.py  sensor.py  switch.py
custom_components/nescafe_ble/translations/: en.json
