[project]
name = "ha-nescafe-ble"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bleak>=3.0.2",
]

[project.scripts]
brewctl = "brewctl:main"

[dependency-groups]
dev = [
    "pre-commit>=4.6.1",
    "pyright>=1.1.411",
    "pytest>=9.1.1",
    "ruff>=0.15.22",
]

[tool.uv]
package = true
